2005-06-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.1.

2005-06-05  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/bacon-message-connection.[ch]:
	* src/update-from-bacon.sh:
	* src/sj-main.c:
	Pull in BaconMessageConnection and use it to re-use existing
	instances (Bastien Nocera)

2005-06-05  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Check for a Glade file in the build tree first (patch from Bastien
	Nocera).

2005-06-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fiddle the path santization a little.

2005-06-02  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on MusicBrainz 2.1.0 for the Date queries.

2005-06-02  Ross Burton  <ross@burtonini.com>

	* src/sj-utils.[ch]:
	Hack away large chunks of this and use nautilus-burn 2.11.1.

	* src/sj-extracting.c:
	* src/sk-main.c:
	Use nautilus-burn rather than sj-util.

2005-06-02  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	Add a GDate to the album, for the release date.

	* src/sj-metadata-musicbrainz.c:
	Get the release date from Musicbrainz.

	* src/sj-extractor.c:
	Write the release date.

	* src/sj-prefs.c:
	Add NULL date to sample album.

2005-05-21  Dafydd Harries  <daf@muse.19inch.net>

	* configure.in:
	Add "cy" (Welsh) to ALL_LINGUAS.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-extractor.c:
	* src/sj-prefs.c:
	Add track artist ID.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on gstreamer-plugins-dev 0.8.8 and nautilus-burn 2.11.1

	* src/sj-structures.[ch]:
	Added fields for the MusicBrainz identifiers.

	* src/sj-metadata-musicbrainz.c:
	Set the MusicBrainz identifiers.

	* src/sj-extractor.c:
	Write the MusicBrainz identifiers.

	* src/sj-prefs.c:
	Update for new structures.

2005-05-20  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.h:
	* src/sj-prefs.c: