@@ -1,5 +1,10 @@
 2005-06-08  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Check for the glade file before opening it (Bastien Nocera).
+
+2005-06-08  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Version 2.11.1.
